MMCPA-103: Fix menu UC browser menu overlap.
**Ticket:**
- http://jira.alshaya.com:8080/browse/MMCPA-103

**Summary**:
- Update to prevent menu overlapping on menu in UC browser Samsung Tab S.

--- a/docroot/themes/custom/alshaya_white_label/sass/components/header/_header-primary.scss
+++ b/docroot/themes/custom/alshaya_white_label/sass/components/header/_header-primary.scss
@@ -156,6 +156,8 @@ header {
       bottom: -3.8125rem;
       #{$left}: 0;
       #{$right}: 0;
+      background: white;
+      padding-bottom: 1rem;
 
       .form-item-keywords {
         float: none !important;
